@@ -1,3 +1,8 @@
+2010-04-19  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/43783
+	* gcc.c-torture/execute/pr43783.c: New testcase.
+
 2010-04-19  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/43766
