@@ -1,3 +1,9 @@
+2010-04-19  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/43783
+	* tree-ssa-pre.c (create_component_ref_by_pieces_1): Drop
+	constant ARRAY_REF operands two and three if possible.
+
 2010-04-19  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/43766
